--- a/frontend/app/src/components/HeroCTA/style.scss
+++ b/frontend/app/src/components/HeroCTA/style.scss
@@ -18,6 +18,7 @@
         max-height: 200px;
         max-width: 600px;
         object-fit: contain;
+        padding-bottom: 10px;
     }
 
     &--link {
